--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nuxt/ui": "^3.2.0",
     "@unhead/vue": "^2.0.12",
     "eslint": "^9.31.0",
+    "marked": "^16.1.1",
     "nuxt": "^4.0.0",
     "ollama": "^0.5.16",
     "typescript": "^5.8.3",
@@ -23,6 +24,7 @@
   },
   "devDependencies": {
     "@iconify-json/heroicons": "^1.2.2",
-    "@iconify-json/lucide": "^1.2.57"
+    "@iconify-json/lucide": "^1.2.57",
+    "@types/marked": "^5.0.2"
   }
 }
