feat: enhance markdown parsing with DOMPurify for security and update dependencies

--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
     "@nuxt/eslint": "^1.6.0",
     "@nuxt/scripts": "^0.11.10",
     "@nuxt/ui": "^3.2.0",
     "@unhead/vue": "^2.0.12",
+    "dompurify": "^3.2.6",
     "eslint": "^9.31.0",
     "marked": "^16.1.1",
     "nuxt": "^4.0.0",
@@ -25,6 +28,7 @@
   "devDependencies": {
     "@iconify-json/heroicons": "^1.2.2",
     "@iconify-json/lucide": "^1.2.57",
+    "@types/dompurify": "^3.0.5",
     "@types/marked": "^5.0.2"
   }
 }
